tests/specs/ecosystem/taisan11/2ch_trip/0_1_0.test
taisan11/2ch-trip/0.1.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/index.ts:13:14
   | 
13 | export const createTripByKey = (key: string) => {
   |              ^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/index.ts:32:14
   | 
32 | export const createTripByText = (text: string, options?: Options) => {
   |              ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/index.ts:53:14
   | 
53 | export const createTrip = (text: string, options?: Options) => createTripByText(text, options)
   |              ^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


